<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team1.android.eabtracker.EABInfoFragment"
    android:id="@+id/main"
    android:background="@color/colorTest3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/ash_characteristic"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="25sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:height="50dp"
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/ash_info"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:gravity="center"
            android:background="@android:drawable/editbox_dropdown_dark_frame" />

        <!--<VideoView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:id="@+id/VideoView"
            android:layout_gravity="center" />-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/horizontalScrollView1"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:measureAllChildren="false"
            android:fillViewport="true"
            android:background="@android:drawable/editbox_dropdown_dark_frame" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:id="@+id/imageView1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ash_tree_identification" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="20dp" />

                <ImageView
                    android:layout_width="431dp"
                    android:layout_height="296dp"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ash_bark" />

            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/bark_damage"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="25sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:height="50dp"
            android:id="@+id/textView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/bark_info"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:gravity="center"
            android:background="@android:drawable/editbox_dropdown_dark_frame" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/horizontalScrollView2"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:measureAllChildren="false"
            android:fillViewport="true"
            android:background="@android:drawable/editbox_dropdown_dark_frame" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ash_vertical_split" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="20dp" />

                <ImageView
                    android:layout_width="431dp"
                    android:layout_height="296dp"
                    android:id="@+id/imageView4"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/woodpecker_flecking" />

            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/tree_canopy"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="25sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:height="50dp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/canopy_info"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:gravity="center"
            android:background="@android:drawable/editbox_dropdown_dark_frame" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/horizontalScrollView3"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:measureAllChildren="false"
            android:fillViewport="true"
            android:background="@android:drawable/bottom_bar" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:id="@+id/imageView5"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ash_crown_thinning"
                    android:background="@android:drawable/editbox_dropdown_dark_frame" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="20dp" />

                <ImageView
                    android:layout_width="431dp"
                    android:layout_height="296dp"
                    android:id="@+id/imageView6"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ash_crown_thinning2" />

            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>
